fixed position for project elements on mobile

--- a/projectStyle.css
+++ b/projectStyle.css
@@ -80,14 +80,9 @@
 @media screen and (max-width:768px) {
 
     #projectCont {
-        width: 10em;
+        width: 20em;
         height: 40em;
-    }
-
-    .projectEle {
-        clear: right;
-        display: block;
-    }
+    } 
 
     .projectEle:nth-child(1) {
         margin-top: 1em;
